updated folders to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
 .DS_Store
+.gitignore
+.classpath
 .vscode/
 bin/
 deadwood.code-workspace
-test/TestTake.java
-test/TestArea.java
-test/TestBoard.java
-test/TestDeck.java
-test/TestLocation.java
-test/TestModel.java
-test/TestParseBoardXML.java
-test/TestParseCardsXML.java
-test/TestPlayer.java
-test/TestRole.java
-test/TestSceneCard.java
-test/TestSingleton.java
-XMLTest.java
-ParseXML.java
-book.xml
-lib/jakarta.xml.bind-api-2.3.3.jar
-lib/jaxb-runtime-2.3.3.jar
-lib/junit-jupiter-api-5.8.1.jar
-lib/junit-jupiter-engine-5.8.1.jar
+test/*
+lib/*
