--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
     <classpathentry kind="src" path="resources"/>
     <!-- <classpathentry kind="lib" path="lib/jakarta.xml.bind-api-2.3.3.jar"/>
     <classpathentry kind="lib" path="lib/jaxb-runtime-2.3.3.jar"/> -->
-    <classpathentry kind="lib" path="lib/junit-jupiter-api-5.8.1.jar"/>
-    <classpathentry kind="lib" path="lib/junit-jupiter-engine-5.8.1.jar"/>
+    <!-- <classpathentry kind="lib" path="lib/junit-jupiter-api-5.8.1.jar"/>
+    <classpathentry kind="lib" path="lib/junit-jupiter-engine-5.8.1.jar"/> -->
     <classpathentry kind="output" path="bin"/>
 </classpath>
