--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "classPaths": [
                 "${workspaceFolder}/.classpath"
             ],
+            "cwd": "${workspaceFolder}",
             "preLaunchTask": "build"
         },
         {
@@ -19,6 +20,7 @@
             "classPaths": [
                 "${workspaceFolder}/.classpath"
             ],
+            "cwd": "${workspaceFolder}",
             "preLaunchTask": "build",
           }
     ]
