--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,10 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "${workspaceFolder}/.classpath"
+                "${workspaceFolder}/build/classes/java/main",
+                "${workspaceFolder}/build/resources/main",
+                // "${workspaceFolder}/lib",
+                "${workspaceFolder}/lib/gson-2.10.1.jar"
             ],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build"
@@ -18,10 +21,14 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "${workspaceFolder}/.classpath"
+                "${workspaceFolder}/build/classes/java/main",
+                "${workspaceFolder}/build/resources/main",
+                // "${workspaceFolder}/lib",
+                "${workspaceFolder}/lib/gson-2.10.1.jar"
             ],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build",
           }
     ]
+    
 }
