--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,38 +25,36 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "problemMatcher": []
         },
         {
             "label": "build",
             "type": "shell",
             // Use the Gradle Wrapper to execute the 'build' task
-            // This assumes your project is set up to compile Java sources as part of the 'build' task
             "command": "./gradlew build",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
             "group": "build",
-            "dependsOn": "clean"
+            "dependsOn": "clean",
+            "problemMatcher": "$gradle",
+            "presentation": {
+                "reveal": "always"
+            },
         },
         {
             "label": "run",
             "type": "shell",
-            
             // Use the Gradle Wrapper to execute the 'run' task
-            // This assumes your project is set up to run the application as part of the 'run' task
             "command": "./gradlew run",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            },
-            "dependsOn": "build"
+            // "group": {
+            //     "kind": "test",
+            //     "isDefault": true
+            // },
+            // "dependsOn": "build"
         }
 
     ]
