switched to javafx

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,12 @@
             "classPaths": [
                 "${workspaceFolder}/build/classes/java/main",
                 "${workspaceFolder}/build/resources/main",
-                // "${workspaceFolder}/lib",
-                "${workspaceFolder}/lib/gson-2.10.1.jar"
+                "${workspaceFolder}/lib/gson-2.10.1.jar",
+                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
             ],
+            "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
-            // "preLaunchTask": "build"
+            "preLaunchTask": "build"
         },
         {
             "type": "java",
@@ -23,12 +24,12 @@
             "classPaths": [
                 "${workspaceFolder}/build/classes/java/main",
                 "${workspaceFolder}/build/resources/main",
-                // "${workspaceFolder}/lib",
-                "${workspaceFolder}/lib/gson-2.10.1.jar"
+                "${workspaceFolder}/lib/gson-2.10.1.jar",
+                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
             ],
+            "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
-            // "preLaunchTask": "build",
-          }
+            "preLaunchTask": "build"
+        }
     ]
-    
 }
