--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,12 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "dependsOn": "build"
         }
 
     ]
