added \"  to either end of all file path calls, fixed vscode not recognizing imports usages

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Groovy DSL
 plugins {
     id 'java'
-    id 'application' 
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 // Project metadata
@@ -12,6 +13,11 @@ version = '1.0-SNAPSHOT'
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
+}
+
+javafx {
+    version = "17"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 // Repository configuration
