--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,26 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "${workspaceFolder}/build/classes/java/main",
-                "${workspaceFolder}/build/resources/main",
-                "${workspaceFolder}/lib/gson-2.10.1.jar",
-                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
+                "\"${workspaceFolder}/build/classes/java/main\"",
+                "\"${workspaceFolder}/build/resources/main\"",
+                "\"${workspaceFolder}/lib/gson-2.10.1.jar\"",
+                "\"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\""
             ],
             "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "build"
+            "preLaunchTask": "build",
+            "stepFilters": {
+                "skipClasses": [
+                "java.*", 
+                "javax.*", 
+                "sun.*", 
+                "com.sun.*", 
+                "jdk.internal.*",  // Added jdk.internal
+                "javafx.*",        // Add javafx internal classes
+                "java.base.*",      // Skip core base modules
+                "java.security.*"   // Skip security-related internal calls
+                ]
+            }
         },
         {
             "type": "java",
@@ -22,14 +34,26 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "${workspaceFolder}/build/classes/java/main",
-                "${workspaceFolder}/build/resources/main",
-                "${workspaceFolder}/lib/gson-2.10.1.jar",
-                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
+                "\"${workspaceFolder}/build/classes/java/main\"",
+                "\"${workspaceFolder}/build/resources/main\"",
+                "\"${workspaceFolder}/lib/gson-2.10.1.jar\"",
+                "\"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\""
             ],
             "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "build"
+            "preLaunchTask": "build",
+            "stepFilters": {
+                "skipClasses": [
+                "java.*", 
+                "javax.*", 
+                "sun.*", 
+                "com.sun.*", 
+                "jdk.internal.*",  // Added jdk.internal
+                "javafx.*",        // Add javafx internal classes
+                "java.base.*",      // Skip core base modules
+                "java.security.*"   // Skip security-related internal calls
+                ]
+            }
         }
     ]
 }
