--- a/.classpath
+++ b/.classpath
@@ -1,32 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" output="bin/main" path="src/main/java">
-		<attributes>
-			<attribute name="gradle_scope" value="main"/>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="bin/main" path="src/main/resources">
-		<attributes>
-			<attribute name="gradle_scope" value="main"/>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="bin/test" path="src/test/java">
-		<attributes>
-			<attribute name="gradle_scope" value="test"/>
-			<attribute name="gradle_used_by_scope" value="test"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="bin/test" path="src/test/resources">
-		<attributes>
-			<attribute name="gradle_scope" value="test"/>
-			<attribute name="gradle_used_by_scope" value="test"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17/"/>
-	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="output" path="bin/default"/>
-</classpath>
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.fxml.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx-swt.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.media.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.graphics.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.swing.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.web.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.controls.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.base.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/junit-jupiter-engine-5.8.1.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/gson-2.10.1.jar
+/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/junit-jupiter-api-5.8.1.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17/54026a476bb95426e2e159bcf25bbf0832d2b7bf/javafx-fxml-17-mac.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17/e73acf695ffccb4f904ff7b76de8999eefb547c2/javafx-controls-17-mac.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17/7116001b777530c89e5c7381d39a2c9268f71e7e/javafx-controls-17.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17/8b1d1124ce83e874db390016913fba7708f3592d/javafx-graphics-17-mac.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17/616d987ba02a86196d7feca443677fff908d5737/javafx-graphics-17.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17/61d52392b063be78f7cc1b0fbfc04dda7a835a15/javafx-base-17-mac.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17/1e6732190939254735dc2a88eca88c5c7ccc719d/javafx-base-17.jar
