--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,10 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "\"${workspaceFolder}/build/classes/java/main\"",
-                "\"${workspaceFolder}/build/resources/main\"",
-                "\"${workspaceFolder}/lib/gson-2.10.1.jar\"",
-                "\"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\""
+                "${workspaceFolder}/build/classes/java/main",
+                "${workspaceFolder}/build/resources/main",
+                "${workspaceFolder}/lib/gson-2.10.1.jar",
+                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
             ],
             "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
@@ -34,10 +34,10 @@
             "request": "launch",
             "mainClass": "Deadwood",
             "classPaths": [
-                "\"${workspaceFolder}/build/classes/java/main\"",
-                "\"${workspaceFolder}/build/resources/main\"",
-                "\"${workspaceFolder}/lib/gson-2.10.1.jar\"",
-                "\"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\""
+                "${workspaceFolder}/build/classes/java/main",
+                "${workspaceFolder}/build/resources/main",
+                "${workspaceFolder}/lib/gson-2.10.1.jar",
+                "${workspaceFolder}/lib/javafx-sdk-17.0.12/lib"
             ],
             "vmArgs": "--module-path \"${workspaceFolder}/lib/javafx-sdk-17.0.12/lib\" --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}",
