--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "java.test.config": {
         "testSource": [
-            "\"${workspaceFolder}/src/test/java\""
+            "${workspaceFolder}/src/test/java"
         ]
     },
     // "java.jdt.ls.vmargs": "--module-path ${workspaceFolder}/lib/javafx-sdk-22.0.2/lib --add-modules javafx.controls,javafx.fxml"
