--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 // Project metadata
@@ -16,7 +16,7 @@ java {
 }
 
 javafx {
-    version = "17"
+    version = "17.0.12"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
@@ -32,12 +32,15 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
     
-    // Include all JAR files from the 'lib' directory and its subdirectories
-    implementation fileTree(dir: 'lib', include: ['**/*.jar'])
+//    // Include all JAR files from the 'lib' directory and its subdirectories
+//    implementation fileTree(dir: 'lib', include: ['**/*.jar'])
 
     // // JavaFX dependencies (pulls from Maven repo, use direct file above)# settings.json
-    // implementation 'org.openjfx:javafx-controls:20.0.2'
-    // implementation 'org.openjfx:javafx-fxml:20.0.2'
+     implementation 'org.openjfx:javafx-controls:17.0.12'
+     implementation 'org.openjfx:javafx-fxml:17.0.12'
+
+    // Gson library from Maven Central
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 // Application configuration
@@ -46,7 +49,7 @@ application {
     
     // VM options to include JavaFX modules
     applicationDefaultJvmArgs = [
-        '--module-path', 'lib/javafx-sdk-17.0.12/lib',
+//        '--module-path', 'lib/javafx-sdk-17.0.12/lib',
         '--add-modules', 'javafx.controls,javafx.fxml'
     ]
 }
