--- a/.classpath
+++ b/.classpath
@@ -1,18 +1,9 @@
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.fxml.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx-swt.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.media.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.graphics.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.swing.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.web.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.controls.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/javafx-sdk-17.0.12/lib/javafx.base.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/junit-jupiter-engine-5.8.1.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/gson-2.10.1.jar
-/Users/andrew/Library/CloudStorage/GoogleDrive-andrewtcrooks@gmail.com/My Drive/WWU/Classes/2024 Spring/CSCI 345/Assignments/Assignment3/deadwood-game/lib/junit-jupiter-api-5.8.1.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17/54026a476bb95426e2e159bcf25bbf0832d2b7bf/javafx-fxml-17-mac.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17/e73acf695ffccb4f904ff7b76de8999eefb547c2/javafx-controls-17-mac.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17/7116001b777530c89e5c7381d39a2c9268f71e7e/javafx-controls-17.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17/8b1d1124ce83e874db390016913fba7708f3592d/javafx-graphics-17-mac.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17/616d987ba02a86196d7feca443677fff908d5737/javafx-graphics-17.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17/61d52392b063be78f7cc1b0fbfc04dda7a835a15/javafx-base-17-mac.jar
-/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17/1e6732190939254735dc2a88eca88c5c7ccc719d/javafx-base-17.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/3e4771d1cd175661d50ca4f9e8cc102ff1b31be8/javafx-fxml-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/8d4cbadfb65f6a8200120903f7da6546a58ff4c5/javafx-fxml-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/9058ca11b89ff27f2a04945f56d7539b88350ef7/javafx-controls-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/217837e79a86f1c9dc48ef97ab7236981adbd878/javafx-controls-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/2659cb9cff1a6fbeb2b882262e014be7ee894f2a/javafx-graphics-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/75e76dcfbd9bfa244d599fb0d7eac66d71890150/javafx-graphics-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/f1c9c207289f8b7bd898d3c81bc7c5da044ec8e3/javafx-base-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/2612e629c65715965bbadafffa90c0d0f50a9386/javafx-base-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.10.1/b3add478d4382b78ea20b1671390a858002feb6c/gson-2.10.1.jar
