corrected class pahts once again

--- a/.classpath
+++ b/.classpath
@@ -1,135 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" output="build/resources/test" path="src/test/resources">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-			<attribute name="resource" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="build/classes/java/test" path="src/test/java">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="build/resources/main" path="src/main/resources">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-			<attribute name="resource" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="build/classes/java/main" path="src/main/java">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="build/classes/java/test" path="build/generated/sources/annotationProcessor/java/test">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="build/classes/java/main" path="build/generated/sources/annotationProcessor/java/main">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JavaSE-17">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/f1c9c207289f8b7bd898d3c81bc7c5da044ec8e3/javafx-base-17.0.12-mac-aarch64.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/7e78e408269a5319ac19b1c56915d2614b128d43/javafx-base-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/2659cb9cff1a6fbeb2b882262e014be7ee894f2a/javafx-graphics-17.0.12-mac-aarch64.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/6144374c68cad8218d299501f9f60f2d454cd633/javafx-graphics-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/75e76dcfbd9bfa244d599fb0d7eac66d71890150/javafx-graphics-17.0.12.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/6144374c68cad8218d299501f9f60f2d454cd633/javafx-graphics-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/2612e629c65715965bbadafffa90c0d0f50a9386/javafx-base-17.0.12.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/7e78e408269a5319ac19b1c56915d2614b128d43/javafx-base-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/3e4771d1cd175661d50ca4f9e8cc102ff1b31be8/javafx-fxml-17.0.12-mac-aarch64.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/67ca723092309326497b34dbbed2ed2a244a6710/javafx-fxml-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/8d4cbadfb65f6a8200120903f7da6546a58ff4c5/javafx-fxml-17.0.12.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/67ca723092309326497b34dbbed2ed2a244a6710/javafx-fxml-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/9058ca11b89ff27f2a04945f56d7539b88350ef7/javafx-controls-17.0.12-mac-aarch64.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/83e6ea49841f62ce5023d3af12242780d05f0bda/javafx-controls-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/217837e79a86f1c9dc48ef97ab7236981adbd878/javafx-controls-17.0.12.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/83e6ea49841f62ce5023d3af12242780d05f0bda/javafx-controls-17.0.12-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.10.1/b3add478d4382b78ea20b1671390a858002feb6c/gson-2.10.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.10.1/982a90132e942f302e6fe79d6e78c4bc2e998569/gson-2.10.1-sources.jar">
-		<attributes>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.apiguardian/apiguardian-api/1.1.2/a231e0d844d2721b0fa1b238006d15c6ded6842a/apiguardian-api-1.1.2.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.apiguardian/apiguardian-api/1.1.2/e0787a997746ac32639e0bf3cb27af8dce8a3428/apiguardian-api-1.1.2-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-api/5.8.1/6538b88eb8bf8811bc7b6efb5246f835c15e0bfe/junit-jupiter-api-5.8.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-api/5.8.1/a3e13f34a2a47fb2c0d7385c5e6e0e8623194061/junit-jupiter-api-5.8.1-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-commons/1.8.1/1e362cbe6d0f225b066757865e233972557484/junit-platform-commons-1.8.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-commons/1.8.1/386b61876dd33d0ef0381189d3c1db9455d99659/junit-platform-commons-1.8.1-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.opentest4j/opentest4j/1.2.0/28c11eb91f9b6d8e200631d46e20a7f407f2a046/opentest4j-1.2.0.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.opentest4j/opentest4j/1.2.0/41d55b3c2254de9837b4ec8923cbd371b8a7eab5/opentest4j-1.2.0-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-engine/1.8.1/e6c63bf990dc88a6527b4ed617b23e47048f07e0/junit-platform-engine-1.8.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-engine/1.8.1/9d87ea7959823714ad803aa91e0618bf2213b52c/junit-platform-engine-1.8.1-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-params/5.8.1/13afdb5d414cbe991fce3ef6b864de77c9644dae/junit-jupiter-params-5.8.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-params/5.8.1/d69300e26c3af1d798f412df28d060333e052472/junit-jupiter-params-5.8.1-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-engine/5.8.1/21b86e08aae2720bbf017703669948be96d1388c/junit-jupiter-engine-5.8.1.jar" sourcepath="/Users/andrew/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-engine/5.8.1/ea87fe3d752e24397f71f347872e79a89c61a704/junit-jupiter-engine-5.8.1-sources.jar">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle.buildServer" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/3e4771d1cd175661d50ca4f9e8cc102ff1b31be8/javafx-fxml-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-fxml/17.0.12/8d4cbadfb65f6a8200120903f7da6546a58ff4c5/javafx-fxml-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/9058ca11b89ff27f2a04945f56d7539b88350ef7/javafx-controls-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-controls/17.0.12/217837e79a86f1c9dc48ef97ab7236981adbd878/javafx-controls-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/2659cb9cff1a6fbeb2b882262e014be7ee894f2a/javafx-graphics-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-graphics/17.0.12/75e76dcfbd9bfa244d599fb0d7eac66d71890150/javafx-graphics-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/f1c9c207289f8b7bd898d3c81bc7c5da044ec8e3/javafx-base-17.0.12-mac-aarch64.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/org.openjfx/javafx-base/17.0.12/2612e629c65715965bbadafffa90c0d0f50a9386/javafx-base-17.0.12.jar
+/Users/andrew/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.10.1/b3add478d4382b78ea20b1671390a858002feb6c/gson-2.10.1.jar
