--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,20 @@
         {
             "type": "java",
             "request": "attach",
-            "name": "Launch Deadwood",
+            "name": "Debug GUI",
             "hostName": "localhost",
             "port": 5005,
             "preLaunchTask": "gradleRunDebug",
             "postDebugTask": "killGradleProcess"
+        },
+        {
+            "type": "java",
+            "request": "attach",
+            "name": "Debug CLI",
+            "hostName": "localhost",
+            "port": 5005,
+            "preLaunchTask": "gradleRunDebugCLI",
+            "postDebugTask": "killGradleProcess",
         }
     ]
 }
