--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ java {
 // JavaFX setup
 javafx {
     version = "17.0.12"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml' ]
 }
 
 // Repository configuration
@@ -35,8 +35,13 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
 
     // JavaFX dependencies
-     implementation 'org.openjfx:javafx-controls:17.0.12'
-     implementation 'org.openjfx:javafx-fxml:17.0.12'
+    implementation 'org.openjfx:javafx-controls:17.0.12'
+    implementation 'org.openjfx:javafx-graphics:17'
+    implementation 'org.openjfx:javafx-base:17'
+    implementation 'org.openjfx:javafx-media:17'
+    implementation 'org.openjfx:javafx-swing:17'
+    implementation 'org.openjfx:javafx-web:17'
+    implementation 'org.openjfx:javafx-fxml:17.0.12'
 
     // Gson library
     implementation 'com.google.code.gson:gson:2.10.1'
